--- a/.gitignore/.env.local
+++ b/.gitignore/.env.local
@@ -1,4 +1,15 @@
 # .env.local (DO NOT commit this file)
-NEXT_PUBLIC_SUPABASE_URL=your_supabase_url
-NEXT_PUBLIC_SUPABASE_ANON_KEY=your_anon_key
-SUPABASE_SERVICE_ROLE_KEY=your_service_role_key
+# Add this file to .gitignore
+
+# Supabase Configuration
+NEXT_PUBLIC_ecg4_SUPABASE_URL=your_supabase_url
+NEXT_PUBLIC_ecg4_SUPABASE_ANON_KEY=your_anon_key
+
+# Server-side only keys (never expose these to the client)
+ecg4_SUPABASE_SERVICE_ROLE_KEY=your_service_role_key
+ecg4_SUPABASE_JWT_SECRET=your_jwt_secret
+
+# Database connection strings (for direct database access if needed)
+ecg4_POSTGRES_URL_NON_POOLING=your_postgres_connection_string
+ecg4_POSTGRES_USER=your_postgres_user
+ecg4_POSTGRES_PASSWORD=your_postgres_password
